--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,15 @@
       {
         "link-name": "off"
       }
-    ]
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-text-size-adjust"
+        ]
+      }
+    ],
+    "disown-opener": "off"
   }
 }
